Add distributed cache integration with Hazelcast, validation framework updates, and Docker configuration for production deployment